# mplstyle-nepes

./: README.org  chart-showcase.py  nepes-dark.mplstyle  nepes-light.mplstyle  pyproject.toml  showcase-secom.py
src/nepes_mplstyle/: __init__.py  nepes-light.mplstyle
src/nepes_mplstyle.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
